2001-04-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-hist.el (w3m-history-copy): Make a copy of `w3m-history-flat'
	using `w3m-history-flat' instead of `w3m-history-copy-1'.

2001-04-02  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* Makefile.in (DISTS): Removed `Makefile'.

2001-04-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-hist.el (w3m-history-backward, w3m-history-forward):
	Simplified.

2001-04-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-hist.el (w3m-history-backward, w3m-history-forward): Allow
	the optional argument `count'.
	(w3m-history-backward-1, w3m-history-forward-1): New macros.

2001-04-02  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m-0.2.1-mnc.patch: Apply patch posted in [w3m-dev 01887].

	* w3m.el (w3m-w3m-dump-head-source): Follow change in MNC patch.
	(w3m-w3m-attributes): Ditto.

2001-04-02  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-crlf-to-lf): New function.
	(w3m-w3m-dump-head-source): Do crlf-to-lf when executable-type eq
	'cygwin.
	(w3m-w3m-dump-source): All time do crlf-to-lf function when
	executable-type eq 'cygwin.

2001-04-02  Taiki SUGAWARA <taiki.s@cityfujisawa.ne.jp>

	* w3m.el (w3m-exec-process): Guard the process from some errors.
	(w3m-copy-buffer): Restore view point with new window to the point in
	original window.

2001-04-02  Hiroya Murata  <hiroya@use-ebisu.co.jp>

	* Makefile.in (Makefile): Depends on config.status instead of
	configure.
	(config.status): New rule.

2001-04-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* aclocal.m4 (AC_PATH_ICONDIR): Quote "$(data-directory)" in help-
	string.

2001-04-02  Akihiro Arisawa  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-html-string-regexp): Make no exception of back-quote.
	(w3m-parse-attributes): Follow up above change.

2001-03-30  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-home-page): Default value is changed.
	(w3m-html-string-regexp): Support single quoted string.